--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f116ecd1750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7facf1210b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f116ed5ab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f116ed5ad10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7facf1606b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7facf1606d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f116efc3490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f116efc3690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7facf1bd5450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7facf1bd5650&gt;]</pre>
 </div>
 
 </div>
