--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa50401e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34fda2be10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa4f5bebd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa4f5bedd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34fce99c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34fce99e50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa4fb80550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa4fb80750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34fd0ee550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34fd0ee750&gt;]</pre>
 </div>
 
 </div>
