--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34fda2be10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6175441690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34fce99c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34fce99e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61754cca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61754ccc90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f34fd0ee550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f34fd0ee750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6175735490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6175735690&gt;]</pre>
 </div>
 
 </div>
