--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb7b0a0410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7bcf5aab10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb7b6b4b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb7b6b4d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bcea17990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7bcea17b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb7b91c5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb7b91c7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7bcec6c2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7bcec6c4d0&gt;]</pre>
 </div>
 
 </div>
