--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc595f2c110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f11399fb7d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc595c52990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc595c52b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1138e32a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1138e32c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc596200310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc596200510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f113909b390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f113909b590&gt;]</pre>
 </div>
 
 </div>
