--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f93112b10d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ae984b0d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f93107e1b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f93107e1d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ae8d97dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ae8d90b50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9310a334d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9310a336d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ae8fc4110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ae8fd0450&gt;]</pre>
 </div>
 
 </div>
