--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1887ac30d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7eedf32d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1888113c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1888113e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eedc4dc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7eedc4de90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f188836e510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f188836e710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eee21a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7eee21a710&gt;]</pre>
 </div>
 
 </div>
