--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9bc11cea10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4bec76c590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bc182a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9bc1828e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bebbedb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bebbedd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9bc1a6e5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9bc1a78710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bebe2c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bebe2c6d0&gt;]</pre>
 </div>
 
 </div>
