--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f105dd89110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2541d2a750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f105d2c9a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f105d2c9c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25424a7b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25424a7d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f105d508410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f105d508610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f25426fb410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f25426fb610&gt;]</pre>
 </div>
 
 </div>
