--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3733442650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb7da1ca1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3733198b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3733198d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7d93a3a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7d93a3c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f37336fd450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f37336fd650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb7d994d450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb7d994d650&gt;]</pre>
 </div>
 
 </div>
