--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e050ad690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd48d8699d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e056f1a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e056f1c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd48d579bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd48d579e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e0595a350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e0595a550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd48db2a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd48db2a750&gt;]</pre>
 </div>
 
 </div>
