--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd48d8699d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd94cbcb150&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd48d579bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd48d579e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94c8e4910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd94c8e4b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd48db2a510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd48db2a750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94cea1290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd94cea1490&gt;]</pre>
 </div>
 
 </div>
