--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd94cbcb150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2d976de50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94c8e4910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd94c8e4b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2d898d850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2d898da50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd94cea1290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd94cea1490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2d8ef2190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc2d8ef2390&gt;]</pre>
 </div>
 
 </div>
