--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc2d976de50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fed6244c990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2d898d850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc2d898da50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fed61e66a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fed61e66c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc2d8ef2190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc2d8ef2390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fed62709310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fed62709510&gt;]</pre>
 </div>
 
 </div>
