--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff4e7fa6b10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3cfcfacb90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4e74d3c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff4e74d3e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cfccd1b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cfccd1d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff4e7723550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff4e7723750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cfd283510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cfd283710&gt;]</pre>
 </div>
 
 </div>
