--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb988c8cad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26f800a5d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb988cdfa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb988cdfc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26f7107a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26f7107c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb988f48350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb988f48550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f26f76ca350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f26f76ca550&gt;]</pre>
 </div>
 
 </div>
