--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4eb06ee310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6054318990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4eb040b390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4eb03dab50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f60543cba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f60543cbc10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4eb062edd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4eb0644450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f605460a350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f605460a550&gt;]</pre>
 </div>
 
 </div>
