--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f372dcc7490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8908e15690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f372dd44c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f372dd44e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f890946ea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f890946ec50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f372df97550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f372df97750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89096d5490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89096d5690&gt;]</pre>
 </div>
 
 </div>
