--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4133609ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38417d3550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4132826b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4132826d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3840d17990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3840d17bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4132d89490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4132d89690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3840f582d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3840f58510&gt;]</pre>
 </div>
 
 </div>
